# gridsense-az

./: .env.example  .gitignore  APS_AI_for_Energy_Technical_Problem_Statement.docx  ARCHITECTURE.md  BLOCKERS.md  LICENSE  Makefile  PLAN.md  PLAN.v1.md.bak  README.md  REBUILD_PLAN.md  RESUME.md  TASKS.md  TODO.md  dump.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: streamlit_app.py
app/components/: feeder_map.py  forecast_chart.py
data/: MANIFEST.yaml
data/models/: eval_report.json  gwnet_v0.pt  history.json  metrics.json
docs/: AI_MODEL_CARD.md  DATA.md  METRICS.md  PHYSICS.md  PRACTICALITY.md  README.md
hf_space/: README.md  app.py  requirements.txt
hf_space_stage/: Dockerfile  app.py
hf_space_stage/app/: __init__.py
notebooks/: 02_gwnet_train.ipynb  02_gwnet_train.smoke.ipynb  colab_train_gwnet.ipynb
notebooks/ckpt_local/: gwnet-epochepoch=00-valval_loss=0.2965.ckpt  gwnet_v1.pt  (+1 more)
reports/: gwnet_v1.md  gwnet_v1_metrics.json
scripts/: deploy_hf_space.sh  gen_stub_forecasts.py  nws_fetch.py  precompute_forecasts.py  pull_all.sh  pull_eia930.py  pull_energybench.py  pull_evi_pro.py  pull_ieee123.sh  pull_noaa.py  pull_nsrdb.py  pull_resstock.py  train.py
tests/: conftest.py  test_dashboard.py  test_decision.py  test_eval.py  test_features.py  test_model_smoke.py  test_power_flow.py  test_precompute.py  test_predictor.py  test_pullers.py  test_topology.py  test_train.py
web/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
(+42 files in other folders)
