[project]
name = "gridsense-az"
version = "0.1.0"
description = "Spatio-temporal AI system for Arizona Public Service distribution-grid feeder-load forecasting with OpenDSS physics-consistency and a Streamlit+pydeck dashboard."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Divyansh Chandarana", email = "dchanda1@asu.edu" },
]
requires-python = ">=3.11"
keywords = [
    "energy",
    "grid",
    "forecasting",
    "graph-wavenet",
    "opendss",
    "arizona",
    "aps",
    "streamlit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/dc-ai-labs/gridsense-az"
Plan = "https://github.com/dc-ai-labs/gridsense-az/blob/main/PLAN.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gridsense"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
    "slow: end-to-end / real-data runs (may take tens of seconds)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
